--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "nodemon index.js",
     "start": "node app.js"
   },
   "author": "Gautam Arora",
@@ -23,11 +22,15 @@
     "express-validator": "^6.6.1",
     "formidable": "^1.2.2",
     "heroku": "^7.53.0",
+    "http-server": "^0.12.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "node-forge": "^0.10.0",
     "nodemon": "^2.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "router": "^1.3.5"
   }
 }
